
Moved convert_connect_args to drivers.py (from utils). (r40)

Added a typemapping class to drivers.py, and switched test_dbapi to use it. (r41).

Added rollback to tearDown of AcuteBase.  Fixed typo of 'password' in ibmdb config.  Cleaned up test_close's determination of what error should be thrown.  Use OrderedDict instead of dict in insert_BLOB_many. (r43)


------------------------
0.1dev, svn commit r36:  First public release of acute-dbapi.  Announced on db-sig:
  http://mail.python.org/pipermail/db-sig/2007-September/005220.html


Notes from the original compliance testsuite: 
 Revision 1.10  2003/10/09 03:14:14  zenzen
 Add test for DB API 2.0 optional extension, where database exceptions
 are exposed as attributes on the Connection object.

 Revision 1.9  2003/08/13 01:16:36  zenzen
 Minor tweak from Stefan Fleiter

 Revision 1.8  2003/04/10 00:13:25  zenzen
 Changes, as per suggestions by M.-A. Lemburg
 - Add a table prefix, to ensure namespace collisions can always be avoided

 Revision 1.7  2003/02/26 23:33:37  zenzen
 Break out DDL into helper functions, as per request by David Rushby

 Revision 1.6  2003/02/21 03:04:33  zenzen
 Stuff from Henrik Ekelund:
     added test_None
     added test_nextset & hooks

 Revision 1.5  2003/02/17 22:08:43  zenzen
 Implement suggestions and code from Henrik Eklund - test that cursor.arraysize
 defaults to 1 & generic cursor.callproc test added

 Revision 1.4  2003/02/15 00:16:33  zenzen
 Changes, as per suggestions and bug reports by M.-A. Lemburg,
 Matthew T. Kromer, Federico Di Gregorio and Daniel Dittmar
 - Class renamed
 - Now a subclass of TestCase, to avoid requiring the driver stub
   to use multiple inheritance
 - Reversed the polarity of buggy test in test_description
 - Test exception heirarchy correctly
 - self.populate is now self._populate(), so if a driver stub
   overrides self.ddl1 this change propogates
 - VARCHAR columns now have a width, which will hopefully make the