@@ -25,8 +25,9 @@ table_prefix = config.table_prefix
 driver_name = config.driver_name
 DriverMeta = getattr(drivers, driver_name) 
 driver_meta = DriverMeta()
-driver_supports = driver_meta
-decorators.supported_features = driver_meta
+dbms_meta = driver_meta.dbms()
+
+decorators.register_supported_features(driver_meta, dbms_meta)
 
 driver_module = util.import_module(driver_name)
 
@@ -40,11 +41,8 @@ ddl2 = 'create table %sbarflys (name varchar(20))' % table_prefix
 #TODO: Was int1 INTEGER NOT NULL GENERATED BY DEFAULT AS IDENTITY,
 #TODO: Had to drop not null & primary key def on int1 b/c datatypes tests didn't always use it
 #TODO:   Note that pysqlite was still allowing inserts, see "test null violations" note below
-#TODO: Had to change CLOB & BLOB to text for postgres
-#TODO:  Change to be table per column??
-
 #TODO: Change to be table per column?  Or just make _insert smarter?
-tm = driver_meta.typemap
+tm = dbms_meta.typemap
 ddl3 = ("""create table %stesttypes (
         int_fld %s,
         varchar1 %s(3),
@@ -57,12 +55,11 @@ ddl3 = ("""create table %stesttypes (
         % (table_prefix, tm.serial, tm.string, tm.date, tm.timestamp, 
            tm.time, tm.clob, tm.blob)
 )
-#print "DDL3:", ddl3
 
 def create_table(con, cs, statement):
     #print "Create table statement is", statement
     cs.execute(statement)
-    if driver_supports.transactional_ddl:
+    if dbms_meta.transactional_ddl:
       con.commit()
 
 def drop_table(con, cs, table, ignore_errors=False):
@@ -71,7 +68,7 @@ def drop_table(con, cs, table, ignore_errors=False):
     except:
         if not ignore_errors:
             raise
-    if driver_supports.transactional_ddl:
+    if dbms_meta.transactional_ddl:
        con.commit()
 
 def setup_once():
@@ -81,7 +78,7 @@ def setup_once():
         con = connect()
     except:
         try:
-            create_db_cmd = driver_meta.get_create_db_cmd(connection_info)
+            create_db_cmd = dbms_meta.get_create_db_cmd(connection_info)
         except NotImplementedError:
             create_db_cmd = ''
 
@@ -199,7 +196,7 @@ class TestModule(AcuteBase):
     def test_apilevel(self):
         "Driver defines apilevel"
         self.failUnless(hasattr(self.driver, "apilevel"), "Driver must define apilevel")
-        self.assertEqual(self.driver.apilevel, driver_supports.dbapi_level)
+        self.assertEqual(self.driver.apilevel, driver_meta.dbapi_level)
 
     def test_threadsafety(self):
         "Driver defines threadsafety"
@@ -577,7 +574,7 @@ class TestCursor(AcuteBase):
     #    for i in range(SIZE):
     #        cs.execute("INSERT INTO CP_TEST_TB VALUES (%s)" % i)
     #
-    #    if driver_supports.stored_procedure_language in ['SQL:2003', 'SQL/PL']:
+    #    if driver_meta.stored_procedure_language in ['SQL:2003', 'SQL/PL']:
     #        stmt = """CREATE FUNCTION CP_TEST_1
     #           (IN P1 INTEGER)
     #           LANGUAGE SQL
@@ -587,7 +584,7 @@ class TestCursor(AcuteBase):
     #              OPEN CS1;
     #           END
     #           """
-    #    elif driver_supports.stored_procedure_language in ['PL/pgSQL']:
+    #    elif driver_meta.stored_procedure_language in ['PL/pgSQL']:
     #        stmt = """CREATE FUNCTION populate() RETURNS integer AS $$
     #                DECLARE
     #                -- declarations
@@ -701,7 +698,7 @@ class TestCursor(AcuteBase):
         try:
             create_table(con, cur, ddl1)
             #TODO: Check this against PEP 249.  Original code claimed -1 was correct answer
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
                 self.assertEqual(cur.rowcount,0,
                     'cursor.rowcount should be 0 after executing no-result '
                     'statements, not %s' % cur.rowcount
@@ -715,14 +712,14 @@ class TestCursor(AcuteBase):
                 )
             cur.execute("select name from %sbooze" % table_prefix)
             #TODO: Move to own test.
-            if driver_supports.sane_empty_fetch:
+            if driver_meta.sane_empty_fetch:
                 self.failUnless(cur.rowcount in (-1,1),
                     'cursor.rowcount should == number of rows returned, or '
                     'set to -1 after executing a select statement, not %s.' % cur.rowcount
                     )
             create_table(con, cur, ddl2)
             #TODO: Check this against PEP 249.  Original code claimed -1 was correct answer
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
                 self.assertEqual(cur.rowcount,0,
                     'cursor.rowcount not being reset to 0 after executing '
                     'no-result statements. It is %s' % cur.rowcount
@@ -882,7 +879,7 @@ class TestCursor(AcuteBase):
                 'cursor.fetchone should return None if no more rows available'
                 )
             #TODO: Move this into own test
-            if driver_supports.rowcount_reset_empty_fetch:
+            if driver_meta.rowcount_reset_empty_fetch:
                 self.failUnless(cur.rowcount in (-1,0),
                                 "rowcount should be reset after failed fetch")
         finally:
@@ -918,7 +915,7 @@ class TestCursor(AcuteBase):
                 'results are exhausted'
             )
             #TODO: Move this into it's own test
-            if driver_supports.rowcount_reset_empty_fetch:
+            if driver_meta.rowcount_reset_empty_fetch:
                 self.failUnless(cur.rowcount in (-1,0),
                                 "rowcount should be reset after empty fetch")
 
@@ -933,14 +930,14 @@ class TestCursor(AcuteBase):
             self.assertEqual(len(r),2)
             r = cur.fetchmany() # Should be an empty sequence
             self.assertEqual(len(r),0)
-            if driver_supports.rowcount_reset_empty_fetch:
+            if driver_meta.rowcount_reset_empty_fetch:
                 self.failUnless(cur.rowcount in (-1,0),
                                 "rowcount should be reset after empty fetch")
 
             cur.arraysize=6
             cur.execute('select name from %sbooze' % table_prefix)
             rows = cur.fetchmany() # Should get all rows
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
               #TODO: Move this to own test.
               self.failUnless(cur.rowcount in (-1,6))
             self.assertEqual(len(rows),6)
@@ -959,7 +956,7 @@ class TestCursor(AcuteBase):
                 'cursor.fetchmany should return an empty sequence if '
                 'called after the whole result set has been fetched'
                 )
-            if driver_supports.rowcount_reset_empty_fetch:
+            if driver_meta.rowcount_reset_empty_fetch:
                 self.failUnless(cur.rowcount in (-1,0),
                                 "rowcount should be reset after empty fetch")
 
@@ -989,7 +986,7 @@ class TestCursor(AcuteBase):
             self.assertEqual(len(rows),len(self.beer_samples),
                 'cursor.fetchall did not retrieve all rows'
                 )
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
               #TODO: Move to own test.  BTW, is sane_rowcount really sane_fetchall_rowcount?
               self.failUnless(cur.rowcount in (-1,len(self.beer_samples)))
             rows = [r[0] for r in rows]
@@ -1004,7 +1001,7 @@ class TestCursor(AcuteBase):
                 'cursor.fetchall should return an empty list if called '
                 'after the whole result set has been fetched'
                 )
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
               self.failUnless(cur.rowcount in (-1,len(self.beer_samples)))
 
             #self.executeDDL2(cur)
@@ -1055,7 +1052,7 @@ class TestCursor(AcuteBase):
             rows23 = cur.fetchmany(2)
             rows4  = cur.fetchone()
             rows56 = cur.fetchall()
-            if driver_supports.sane_rowcount:
+            if driver_meta.sane_rowcount:
               self.failUnless(cur.rowcount in (-1,6))
             self.assertEqual(len(rows23),2,
                 'fetchmany returned incorrect number of rows'
@@ -1130,7 +1127,7 @@ class TestCursor(AcuteBase):
           cs.execute("drop table %s" % self.tableName)
         except:
           con.rollback()
-        bt = driver_meta.typemap.blob
+        bt = dbms_meta.typemap.blob
         cs.execute("CREATE TABLE %s ( P1 %s, P2 %s )" % (self.tableName, bt, bt))
 
     @requires('smart_lob_open')
@@ -1312,7 +1309,7 @@ class TestSQLProcs(AcuteBase):
         con = self._connect()
         try:
             cur = con.cursor()
-            r = cur.callproc(driver_supports.lower_func,('FOO',))
+            r = cur.callproc(driver_meta.lower_func,('FOO',))
             self.assertNotEqual(r, None)
             self.assertEqual(len(r),1)
             self.assertEqual(r[0],'FOO')
